<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="25dp"
            android:textSize="30dp"
            android:background="@color/colorGrey"
            android:text="@string/activity_edit_screen_personInformation"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/activity_edit_screen_fullName"
                android:textSize="20dp"
                android:textStyle="bold">


            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:id="@+id/activity_edit_screen_fullName_textView"
                android:text=""
                android:textSize="20dp">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/activity_edit_screen_gender"
                android:textSize="20dp"
                android:textStyle="bold">


            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:id="@+id/activity_edit_screen_gender_TextView"
                android:text=""
                android:textSize="20dp">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/activity_edit_screen_workingStatus"
                android:textSize="20dp"
                android:textStyle="bold">


            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:id="@+id/activity_edit_screen_workingSatatus_TextView"
                android:text=""
                android:textSize="20dp">

            </TextView>


        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_screen_removePerson_button"
            android:id="@+id/activity_edit_screen_removePerson_button">

        </Button>

    </LinearLayout>

</FrameLayout>